--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>你好，GitHub</title>
+  </head>
+  <body>
+    <h1>覺得厲害</h1>
+  </body>
 </html>
