--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <title>你媽死ㄌ</title>
   </head>
   <body>
-    <h1>覺得厲害</h1>
+    <h1>幹你娘</h1>
   </body>
 </html>
